[gd_scene load_steps=24 format=3 uid="uid://ca8bu6oaovpaw"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_3vnwj"]
[ext_resource type="Texture2D" uid="uid://7htmx1ae8i1d" path="res://assets/images/1x1_white.png" id="1_5gkvc"]
[ext_resource type="PackedScene" uid="uid://c7ehiibfu2wfs" path="res://scenes/walls/wall.tscn" id="3_r4ug3"]
[ext_resource type="PackedScene" uid="uid://dcwfbqpcamdy7" path="res://scenes/walls/top.tscn" id="4_ut730"]
[ext_resource type="Texture2D" uid="uid://dkrf3loockfsj" path="res://assets/images/noise.png" id="5_gbuh6"]
[ext_resource type="Script" path="res://scenes/Splash.gd" id="6_ybfi8"]
[ext_resource type="FontFile" uid="uid://c4gwrk6vad2vk" path="res://assets/fonts/LibreBaskerville-Regular.ttf" id="7_0lwrg"]
[ext_resource type="FontFile" uid="uid://wlifu43k750l" path="res://assets/fonts/CormorantGaramond-Regular.ttf" id="8_xur25"]
[ext_resource type="PackedScene" uid="uid://c3eccsdtu0fop" path="res://scenes/UI/keyboard_arrow_cluster.tscn" id="9_sbnu7"]
[ext_resource type="Theme" uid="uid://yr4kjgxtyvuh" path="res://assets/themes/default.tres" id="10_ot3g2"]
[ext_resource type="PackedScene" uid="uid://styu3vbul66p" path="res://scenes/UI/keyboard_wasd_cluster.tscn" id="11_p3715"]
[ext_resource type="Texture2D" uid="uid://dph1rgxbgxdvp" path="res://assets/images/button_prompts/keyboard_r_outline.svg" id="12_jh5qb"]
[ext_resource type="PackedScene" uid="uid://xdh2mkgj0fgq" path="res://scenes/UI/fade_in_label.tscn" id="13_h02hp"]

[sub_resource type="Animation" id="Animation_mhut5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../LeftSideBarText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iqrlk"]
resource_name = "fade_left_texts"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.5, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../LeftSideBarText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twwo8"]
_data = {
"RESET": SubResource("Animation_mhut5"),
"fade_left_texts": SubResource("Animation_iqrlk")
}

[sub_resource type="Animation" id="Animation_tfus2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Labels/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Labels/Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Labels/Label3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ojmdf"]
resource_name = "show_labels"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Labels/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Labels/Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Labels/Label3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cskx2"]
_data = {
"RESET": SubResource("Animation_tfus2"),
"show_labels": SubResource("Animation_ojmdf")
}

[sub_resource type="Animation" id="Animation_bfxbb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cnlll"]
resource_name = "hide_splash"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_in24v"]
_data = {
"RESET": SubResource("Animation_bfxbb"),
"hide_splash": SubResource("Animation_cnlll")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7luns"]
bg_color = Color(0.145098, 0.145098, 0.145098, 0.941176)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Game" type="Node2D"]
script = ExtResource("1_3vnwj")
unlocked_camera_speed = 0.1
breaking_position = 600
game_movement_offset = 600
camera_move_speed = 0.001

[node name="Walls" type="Node2D" parent="."]

[node name="BLCorner" type="Sprite2D" parent="Walls"]
position = Vector2(312, 818)
scale = Vector2(16, 16)
texture = ExtResource("1_5gkvc")

[node name="BRCorner" type="Sprite2D" parent="Walls"]
position = Vector2(1028, 818)
scale = Vector2(16, 16)
texture = ExtResource("1_5gkvc")

[node name="RightWall" parent="Walls" instance=ExtResource("3_r4ug3")]
unique_name_in_owner = true
position = Vector2(1028, -4190)
scale = Vector2(2, 10000)

[node name="Bottom" parent="Walls" instance=ExtResource("3_r4ug3")]
unique_name_in_owner = true
position = Vector2(670, 818)
scale = Vector2(700, 2)

[node name="LeftWall" parent="Walls" instance=ExtResource("3_r4ug3")]
unique_name_in_owner = true
position = Vector2(312, -4190)
scale = Vector2(2, 10000)

[node name="Top" parent="Walls" instance=ExtResource("4_ut730")]
unique_name_in_owner = true
position = Vector2(670, -1483.7)
scale = Vector2(700, 16)

[node name="Background" type="TextureRect" parent="Walls"]
z_index = -3
offset_left = -1421.0
offset_top = -9780.0
offset_right = 2339.0
offset_bottom = 1862.0
mouse_filter = 2
texture = ExtResource("5_gbuh6")
expand_mode = 1
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="tetrominos" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera" type="Node2D" parent="."]

[node name="MainCamera" type="Camera2D" parent="Camera"]
unique_name_in_owner = true
position = Vector2(720, 405)

[node name="CameraDestination" type="Marker2D" parent="Camera"]
unique_name_in_owner = true
position = Vector2(720, 405)

[node name="OriginalCameraDestination" type="Marker2D" parent="Camera"]
unique_name_in_owner = true
position = Vector2(720, 405)

[node name="SpawnLocations" type="Node2D" parent="."]

[node name="SpawnLocation" type="Marker2D" parent="SpawnLocations"]
unique_name_in_owner = true
position = Vector2(670, -50)

[node name="OriginalSpawnLocation" type="Marker2D" parent="SpawnLocations"]
unique_name_in_owner = true
position = Vector2(670, -50)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="TetroScroll" type="ScrollContainer" parent="UILayer"]
unique_name_in_owner = true
offset_left = 1072.0
offset_top = 120.0
offset_right = 1408.0
offset_bottom = 778.0

[node name="MarginContainer" type="MarginContainer" parent="UILayer/TetroScroll"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="tetro_choices" type="VBoxContainer" parent="UILayer/TetroScroll/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LeftSideBar" type="PanelContainer" parent="UILayer"]
unique_name_in_owner = true
visible = false
offset_left = 12.0
offset_top = 14.0
offset_right = 291.0
offset_bottom = 715.0

[node name="MarginContainer" type="MarginContainer" parent="UILayer/LeftSideBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LeftSideBarText" type="RichTextLabel" parent="UILayer/LeftSideBar/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_0lwrg")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "The area in the middle represents the wealth of the 400 richest Americans. 

Spend their money — click on one of the blocks on the right. 

Use Arrow keys or WASD to move them around as they fall. Use R to rotate them. Hover over them to see what they represent.



I put this game together in a week, which means the numbers are, admittedly, not that well researched. In addition, this game is a rip-off of [url=https://mkorostoff.github.io/1-pixel-wealth/]this game[/url], which is much more educational, and [url=https://direkris.itch.io/you-are-jeff-bezos]this game[/url], which is much funnier."
fit_content = true

[node name="LeftSideBarEndText" type="RichTextLabel" parent="UILayer/LeftSideBar/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("7_0lwrg")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Well, you did it, you reached the top. You can scroll down to see lower parts of the game area.

Though you haven't managed to spend all their money. Think you can squeeze a bit more in?"
fit_content = true

[node name="LeftSideBarAnimationPlayer" type="AnimationPlayer" parent="UILayer/LeftSideBar/MarginContainer/LeftSideBarEndText"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_twwo8")
}

[node name="Label4" type="Label" parent="UILayer"]
offset_left = 1072.0
offset_top = 34.0
offset_right = 1412.0
offset_bottom = 99.0
theme = ExtResource("10_ot3g2")
text = "Click a topic to \"spend
money\" and create a block."
autowrap_mode = 3

[node name="SplashLayer" type="CanvasLayer" parent="."]

[node name="Splash" type="Node2D" parent="SplashLayer"]
visible = false
script = ExtResource("6_ybfi8")

[node name="Noise" type="TextureRect" parent="SplashLayer/Splash"]
offset_left = -345.0
offset_top = -155.0
offset_right = 1852.0
offset_bottom = 1029.0
texture = ExtResource("5_gbuh6")
stretch_mode = 1

[node name="ShowLabels" type="AnimationPlayer" parent="SplashLayer/Splash"]
libraries = {
"": SubResource("AnimationLibrary_cskx2")
}
autoplay = "show_labels"

[node name="Labels" type="Node2D" parent="SplashLayer/Splash"]

[node name="Label" type="Label" parent="SplashLayer/Splash/Labels"]
modulate = Color(1, 1, 1, 0)
offset_left = 370.0
offset_top = 100.0
offset_right = 1070.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("8_xur25")
theme_override_font_sizes/font_size = 48
text = "\"The problem with socialism is that you eventually run out of other people's money.\"

— Margaret Thatcher"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="SplashLayer/Splash/Labels"]
modulate = Color(1, 1, 1, 0)
offset_left = 120.0
offset_top = 600.0
offset_right = 1320.0
offset_bottom = 940.0
theme_override_fonts/font = ExtResource("7_0lwrg")
theme_override_font_sizes/font_size = 48
text = "So let's do that.
Let's run out of other people's money."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label3" type="Label" parent="SplashLayer/Splash/Labels"]
modulate = Color(1, 1, 1, 0)
offset_left = 120.0
offset_top = 737.0
offset_right = 1320.0
offset_bottom = 1077.0
theme_override_fonts/font = ExtResource("7_0lwrg")
theme_override_font_sizes/font_size = 24
text = "(Click to continue)"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HideSplash" type="AnimationPlayer" parent="SplashLayer/Splash"]
libraries = {
"": SubResource("AnimationLibrary_in24v")
}

[node name="Sidebar" type="Node2D" parent="."]

[node name="KeyboardArrowCluster" parent="Sidebar" instance=ExtResource("9_sbnu7")]
position = Vector2(32, 325)
scale = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="Sidebar"]
offset_left = 139.0
offset_top = 338.0
offset_right = 179.0
offset_bottom = 369.0
theme = ExtResource("10_ot3g2")
text = "or"

[node name="Label2" type="Label" parent="Sidebar"]
offset_left = 64.0
offset_top = 409.0
offset_right = 251.0
offset_bottom = 440.0
theme = ExtResource("10_ot3g2")
text = "to move blocks"

[node name="Label3" type="Label" parent="Sidebar"]
offset_left = 56.0
offset_top = 576.0
offset_right = 246.0
offset_bottom = 607.0
theme = ExtResource("10_ot3g2")
text = "to rotate blocks"
horizontal_alignment = 1

[node name="keyboard_wasd_cluster" parent="Sidebar" instance=ExtResource("11_p3715")]
position = Vector2(179, 327)
scale = Vector2(0.5, 0.5)

[node name="KeyboardROutline" type="Sprite2D" parent="Sidebar"]
position = Vector2(151, 535)
texture = ExtResource("12_jh5qb")

[node name="PanelContainer" type="PanelContainer" parent="Sidebar"]
offset_left = 446.0
offset_top = 695.0
offset_right = 901.0
offset_bottom = 800.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7luns")

[node name="MarginContainer" type="MarginContainer" parent="Sidebar/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="this_area_represents" type="Label" parent="Sidebar/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("10_ot3g2")
text = "This area represents the wealth of
the richest 400 Americans."

[node name="PanelContainer2" type="PanelContainer" parent="Sidebar"]
offset_left = 512.0
offset_top = -101.0
offset_right = 804.0
offset_bottom = -30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7luns")

[node name="MarginContainer" type="MarginContainer" parent="Sidebar/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="this_area_represents" type="Label" parent="Sidebar/PanelContainer2/MarginContainer"]
layout_mode = 2
theme = ExtResource("10_ot3g2")
text = "Yup, this whole area."
horizontal_alignment = 1

[node name="FadeInLabel" parent="Sidebar" instance=ExtResource("13_h02hp")]
offset_left = 25.0
offset_top = -16.0
offset_right = 25.0
offset_bottom = -16.0

[node name="Label" parent="Sidebar/FadeInLabel" index="2"]
offset_right = 266.0
offset_bottom = 115.0
text = "Hi
Multiline amiwrite
what's up"

[connection signal="meta_clicked" from="UILayer/LeftSideBar/MarginContainer/LeftSideBarText" to="." method="_on_left_side_bar_text_meta_clicked"]
[connection signal="animation_finished" from="SplashLayer/Splash/HideSplash" to="SplashLayer/Splash" method="_on_hide_splash_animation_finished"]

[editable path="Sidebar/FadeInLabel"]
